# stoffel

./: .aiignore  .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.benchmark  Dockerfile.benchmark-flexible  README.md  docker-compose.avss.yml  docker-compose.benchmark.yml  docker-compose.coordinator.client2-output.yml  docker-compose.coordinator.reserve-index.preproc.yml  docker-compose.coordinator.reserve-index.yml  docker-compose.yml  install.sh
crates/stoffel-bindgen/: Cargo.toml
crates/stoffel-bindgen/src/: lib.rs
crates/stoffel-cli/: Cargo.toml
crates/stoffel-cli/src/: main.rs  project.rs
crates/stoffel-cli/tests/: cli.rs
crates/stoffel-lang/: .gitignore  CLAUDE.md  CLIENTSTORE_FILL_OBJECT_REQUIREMENTS.md  Cargo.toml  README.md  bytecode.txt
crates/stoffel-lang/examples/: COVERAGE.md  Makefile  README.md  docker-compose.coordinator.yml  docker-compose.mpc.yml  ffi_example.c  run_coordinator_compose.sh  run_mpc_local.sh  validate_examples.sh
crates/stoffel-lang/examples/avss_share_auditor/: README.md  main.stfl
crates/stoffel-lang/examples/language_mpc_schemas/: README.md  main.stfl
crates/stoffel-lang/examples/language_policy_engine/: README.md  main.stfl  math_rules.stfl
crates/stoffel-lang/examples/local_closure_counter/: README.md  main.stfl
crates/stoffel-lang/examples/local_collections/: README.md  main.stfl
crates/stoffel-lang/examples/local_control_flow/: README.md  main.stfl
crates/stoffel-lang/examples/local_dynamic_workflow/: README.md  main.stfl
crates/stoffel-lang/examples/local_nested_generics/: README.md  main.stfl
crates/stoffel-lang/examples/local_storage/: README.md  main.stfl
crates/stoffel-lang/examples/local_text_processing/: README.md  main.stfl
crates/stoffel-lang/examples/local_uint64_inverse/: README.md  main.stfl
crates/stoffel-lang/examples/mpc_abs_diff/: README.md  Stoffel.toml  main.stfl
crates/stoffel-lang/examples/mpc_aes128_cbc/: Stoffel.toml  main.stfl  run.sh
crates/stoffel-lang/examples/mpc_aes128_cbc_client_io/: Cargo.toml  README.md  Stoffel.toml  build.rs  main.stfl
crates/stoffel-lang/examples/mpc_aes128_circuit/: README.md  Stoffel.toml  main.stfl
crates/stoffel-lang/examples/mpc_aes128_ctr/: Stoffel.toml  main.stfl  run.sh
crates/stoffel-lang/examples/mpc_aes128_ctr_client_io/: README.md  Stoffel.toml  main.stfl
crates/stoffel-lang/examples/mpc_aes128_modes/: README.md  Stoffel.toml  main.stfl  run.sh
crates/stoffel-lang/examples/mpc_aes128_secure_decrypt/: README.md  Stoffel.toml  main.stfl
crates/stoffel-lang/examples/mpc_aes128_threshold_input/: README.md  Stoffel.toml  main.stfl  run.sh
crates/stoffel-lang/examples/mpc_aes128_transcipher/: README.md  Stoffel.toml  main.stfl
crates/stoffel-lang/examples/mpc_argmax/: README.md  Stoffel.toml  main.stfl
crates/stoffel-lang/examples/mpc_bit_decomposition/: README.md  Stoffel.toml  main.stfl
crates/stoffel-lang/examples/mpc_bit_reverse_rotate/: README.md  Stoffel.toml  main.stfl
crates/stoffel-lang/examples/mpc_bitonic_sort/: README.md  Stoffel.toml  main.stfl
crates/stoffel-lang/examples/mpc_bitwise_int/: README.md  Stoffel.toml  main.stfl
crates/stoffel-lang/examples/mpc_bitwise_share/: README.md  Stoffel.toml  main.stfl
crates/stoffel-lang/examples/mpc_boolean_circuit/: README.md  main.stfl
crates/stoffel-lang/examples/mpc_clamp/: README.md  Stoffel.toml  main.stfl
crates/stoffel-lang/examples/mpc_client_federated_average/: README.md  main.stfl
crates/stoffel-lang/examples/mpc_client_private_score/: README.md  main.stfl
crates/stoffel-lang/examples/mpc_compare_family/: README.md  Stoffel.toml  main.stfl
crates/stoffel-lang/examples/mpc_count_frequency/: README.md  Stoffel.toml  main.stfl
crates/stoffel-lang/examples/mpc_covariance/: README.md  Stoffel.toml  main.stfl
crates/stoffel-lang/examples/mpc_dark_pool/: README.md  Stoffel.toml  main.stfl
crates/stoffel-lang/examples/mpc_decision_tree/: README.md  Stoffel.toml  main.stfl
crates/stoffel-lang/examples/mpc_dh_psi/: README.md  Stoffel.toml  main.stfl
crates/stoffel-lang/examples/mpc_distance_metrics/: README.md  (+2 more)
crates/stoffel-lang/include/: stoffellang.h
crates/stoffel-lang/src/: ast.rs  binary_converter.rs  builtin_registry.rs  bytecode.rs  codegen.rs  compiler.rs  core_types.rs  errors.rs  ffi.rs  lexer.rs  lib.rs  main.rs  module_resolver.rs  multi_file_compiler.rs  optimizations.rs  parser.rs  preprocessing_planner.rs  register_allocator.rs  semantic.rs  suggestions.rs  symbol_table.rs  ufcs.rs  ufcs_tests.rs
crates/stoffel-rust-sdk/: Cargo.toml  README.md
crates/stoffel-rust-sdk/examples/: aes_cbc_client_io.rs  aes_ctr_client_io.rs  aes_secure_decrypt.rs  aes_transcipher.rs  avss.rs  bytecode_roundtrip.rs  client_server.rs  local_clear.rs  local_mpc_client_input.rs  local_mpc_named_inputs.rs  network_config.rs  observability.rs  onchain.rs  quickstart.rs  quickstart_mpc.rs
crates/stoffel-rust-sdk/src/: client.rs  codegen.rs  compiler.rs  config.rs  error.rs  input_file.rs  lib.rs  networking.rs  prelude.rs  program.rs  runtime.rs  server.rs  types.rs  vm.rs
crates/stoffel-rust-sdk/tests/: compile_fail.rs  sdk_usage.rs
crates/stoffel-vm/: Cargo.toml
crates/stoffel-vm-runner/: Cargo.toml
crates/stoffel-vm-runner/src/: lib.rs  local_runner.rs
crates/stoffel-vm-runner/tests/: local_coordinator_e2e.rs
crates/stoffel-vm-types/: Cargo.toml
crates/stoffel-vm-types/examples/: generate_client_mul_program.rs
crates/stoffel-vm-types/src/: activations.rs  compiled_binary.rs  core_types.rs  functions.rs  instructions.rs  lib.rs  registers.rs
crates/stoffel-vm/src/: cffi.rs  core_vm.rs  error.rs  foreign_functions.rs  lib.rs  mpc_builtins.rs  mpc_values.rs  output.rs  program.rs  reveal_destination.rs  runtime_hooks.rs  runtime_instruction.rs  runtime_value_ops.rs  standard_library.rs  value_conversions.rs  vm_function_helper.rs  vm_state.rs
crates/stoffel-vm/tests/: aes_count.rs  local_coordinator_e2e.rs
docker/coordinator-wrapper/: Cargo.toml
docker/coordinator-wrapper/src/: main.rs
(+813 files in other folders)
