[workspace]
members = [
    "crates/stoffel-cli",
    "crates/stoffel-lang",
    "crates/stoffel-rust-sdk",
    "crates/stoffel-vm",
    "crates/stoffel-vm-types",
]
resolver = "2"
exclude = [
    "vendor/mpc-protocols-limit-test",
]

[patch."https://github.com/Stoffel-Labs/mpc-protocols.git"]
stoffelmpc-mpc = { path = "vendor/mpc-protocols-limit-test/mpc" }
stoffelmpc-network = { path = "vendor/mpc-protocols-limit-test/network" }
