[package]
name = "stoffel-bindgen"
version = "0.1.0"
edition = "2021"
description = "Build-time Rust binding generation for Stoffel programs"
license = "MIT"
repository = "https://github.com/Stoffel-Labs/StoffelVM"
publish = false

[dependencies]
stoffellang = { version = "0.1.0", path = "../stoffel-lang" }
thiserror = "2"
