[package]
name = "stoffel-bindgen"
version = "0.1.0"
edition = "2021"
description = "Build-time Rust binding generation for Stoffel programs"
license = "Apache-2.0"
repository = "https://github.com/Stoffel-Labs/StoffelVM"
publish = false

[dependencies]
stoffellang = { version = "0.1.0", path = "../stoffel-lang" }
thiserror = "2"
