[package]
name = "stoffel-bindgen"
version = "0.1.0"
edition = "2021"
description = "Build-time Rust binding generation for Stoffel programs"
license = "MIT"
repository = "https://github.com/Stoffel-Labs/StoffelVM"
homepage = "https://stoffelmpc.com"
keywords = ["mpc", "bindings", "codegen", "compiler", "rust"]
categories = ["development-tools::build-utils", "compilers"]
publish = true

[dependencies]
stoffellang = "0.1.0"
thiserror = "2"
