[package]
name = "stoffel-rust-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for building Stoffel MPC applications"
license = "MIT"
repository = "https://github.com/Stoffel-Labs/StoffelVM"
readme = "README.md"
keywords = ["mpc", "sdk", "compiler", "vm", "cryptography"]
categories = ["api-bindings", "compilers", "cryptography"]
publish = false

[features]
on-chain = ["dep:stoffel-mpc-coordinator-on-chain"]

[lib]
name = "stoffel"

[dependencies]
alloy = { version = "1.5.2", features = ["full", "node-bindings"] }
ark-bls12-381 = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = { version = "0.5.0", features = ["ark-serialize-derive"] }
futures-core = "0.3"
csv = "1.3"
opentelemetry = "0.32.0"
opentelemetry-stdout = { version = "0.32.0", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.32.1", default-features = false, features = ["trace"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stoffelnet = "0.1.0"
tempfile = "3"
thiserror = "2"
tokio = { version = "1.47.1", features = ["rt", "sync", "time"] }
toml = "0.8"
tracing = { version = "0.1", features = ["attributes"] }
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

stoffellang = { version = "0.1.0", path = "../stoffel-lang" }
stoffel-mpc-coordinator-shared = "0.1.0"
stoffel-mpc-coordinator-off-chain = "0.1.0"
stoffel-mpc-coordinator-on-chain = { version = "0.1.0", git = "https://github.com/Stoffel-Labs/stoffel-mpc-coordinator.git", branch = "dev", optional = true }
stoffel-vm = { version = "0.1.0", path = "../stoffel-vm" }
stoffel-vm-runner = { version = "0.1.0", path = "../stoffel-vm-runner" }
stoffel-vm-types = { version = "0.1.0", path = "../stoffel-vm-types" }
stoffelmpc-mpc = { package = "stoffelcrypto", version = "0.1.0" }

[[example]]
name = "onchain"
required-features = ["on-chain"]

[dev-dependencies]
aes = "0.8"
stoffel-bindgen = { version = "0.1.0", path = "../stoffel-bindgen" }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
trybuild = "1"
