[package]
name = "stoffel-vm-types"
version = "0.1.0"
edition = "2024"
description = "Shared bytecode, instruction, and runtime value types for the Stoffel virtual machine"
license = "MIT"
repository = "https://github.com/Stoffel-Labs/StoffelVM"
homepage = "https://stoffelmpc.com"
keywords = ["mpc", "bytecode", "vm", "compiler", "runtime"]
categories = ["compilers", "cryptography", "data-structures"]

[dependencies]
rustc-hash = "2.1.1"
smallvec = "1.11"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
