[package]
name = "stoffel-coordinator-docker"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
ark-bn254 = "0.5.0"
ark-bls12-381 = "0.5.0"
ark-curve25519 = "0.5.0"
ark-ec = "0.5.0"
ark-ed25519 = "0.5.0"
ark-ff = "0.5.0"
ark-secp256k1 = "0.5.0"
ark-secp256r1 = "0.5.0"
async-trait = "0.1.89"
clap = { version = "4.5.56", features = ["derive"] }
hex = "0.4.3"
jsonrpsee = { version = "0.26.0", features = ["full"] }
rustls = "0.23.36"
stoffel-mpc-coordinator = { version = "0.1.0", path = "../../../stoffel-mpc-coordinator" }
stoffelmpc-mpc = { package = "stoffelcrypto", version = "0.1.0", git = "https://github.com/Stoffel-Labs/mpc-protocols.git", branch = "main" }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time"] }
x509-parser = "0.18.1"
