[package]
name = "mpc-aes128-cbc-client-io"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
stoffel = { package = "stoffel-rust-sdk", path = "../../../stoffel-rust-sdk" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
stoffel-bindgen = { path = "../../../stoffel-bindgen" }
